# music-assistant-desktop-app

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: clipboard-polyfill.js  settings.html
src-tauri/src/: discord_rpc.rs  lib.rs  mdns_discovery.rs  media_controls.rs  now_playing.rs  settings.rs
src-tauri/src/sendspin/: devices.rs  mod.rs  protocol.rs
src-tauri/src/sendspin/volume_control/: macos.rs  windows.rs
