[package]
authors = ["The Music Assistant Team"]
description = "Music Assistant Companion App"
edition = "2021"
license = "Apache-2.0"
name = "music-assistant"
repository = "https://github.com/music-assistant/desktop-app"
rust-version = "1.77.2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "app_lib"

[build-dependencies]
tauri-build = {version = "2.5", features = [] }

[dependencies]
dirs = "5.0"
discord-rich-presence = "1.0"
flume = "0.11"
log = "0.4"
mdns-sd = "0.12"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "2.9", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
tauri-plugin-autostart = "2"

# Sendspin native client
# Using phase3-artwork-visualizer branch for full protocol support (commands, state, artwork)
cpal = "0.15"
futures-util = "0.3"
hostname = "0.4"
parking_lot = "0.12"
png = "0.17"
sendspin = {git = "https://github.com/Sendspin/sendspin-rs", branch = "main"}
tokio = {version = "1", features = ["sync", "macros", "time"] }
tokio-tungstenite = "0.26"
uuid = {version = "1", features = ["v4"] }

# System media controls (Now Playing integration)
souvlaki = "0.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2.9"
tauri-plugin-window-state = "2"

# Platform-specific hardware volume control
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "implement"] }
windows-core = "0.58"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that don't hurt code quality
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
unreadable_literal = "allow"
similar_names = "allow"
wildcard_imports = "allow"
uninlined_format_args = "allow"
redundant_closure_for_method_calls = "allow"
significant_drop_tightening = "allow"
ignored_unit_patterns = "allow"
needless_pass_by_value = "allow"

# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.
